--- a/vignettes/Child_RMDs/_Programatic_Titling_Test.Rmd
+++ b/vignettes/Child_RMDs/_Programatic_Titling_Test.Rmd
@@ -3,12 +3,12 @@ title: "TEST"
 author: "Matthew Hamilton"
 date: "06/08/2020"
 output:
+  officedown::rdocx_document:
+    number_sections: yes
   pdf_document:
     number_sections: yes
     includes:  
       in_header: preamble.tex
-  officedown::rdocx_document:
-    number_sections: yes
   bookdown::html_document2:
     number_sections: yes
   html_document:
@@ -18,13 +18,14 @@ output:
     includes:  
       in_header: preamble.tex
 params:
-  pdf_output_lgl: !r T
+  output_type_1L_chr: "Word"
 graphics: yes
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(comment=NA)
+library(flextable)
 library(xtable) # EDIT
 library(FBaqol) # EDIT
 library(magrittr)
@@ -85,15 +86,16 @@ purrr::walk(1:length(output_ls),
                                 label_refs_chr = label_refs_mat[.x,]))
 }
 print_table_xx <- function(data_tb,
-                           pdf_output_lgl,
-                           caption_chr,
+                           output_type_1L_chr = "PDF",
+                           caption_1L_chr = NA_character_,
+                           footnotes_chr = NA_character_,
                            label,
                            hline.after,
                            addtorow,
                            sanitize_fn = getOption("xtable.sanitize.text.function", NULL)){
    data_x_tb <- data_tb %>%
-  xtable::xtable(caption = caption_chr, label = label)
-if(pdf_output_lgl){
+  xtable::xtable(caption = caption_1L_chr, label = label)
+if(output_type_1L_chr == "PDF"){
  data_x_tb %>%
   print(comment = F,
         floating = TRUE, #floating.environment = "sidewaystable",
@@ -105,14 +107,119 @@ if(pdf_output_lgl){
         include.rownames = FALSE#,scalebox = 0.75
         ) 
 }else{
-  data_tb %>%
+  if(output_type_1L_chr == "HTML"){
+  data_tb <- data_tb %>%
     kableExtra::kable(escape = F,
-        caption = caption_chr) %>%
-      kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed"), 
+        caption = caption_1L_chr) %>%
+      kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), 
                                 full_width = F, 
-                                position = "left") # NEED TO ADD FOOTNOTE
+                                position = "left") %>%
+      kableExtra::footnote(general = "TEST 1",
+                           general_title = "TEST 2",
+                           footnote_as_chunk = T,
+                           title_format = c("italic","underline"),
+                           threeparttable = T)
+  print(data_tb)
+  }
+    if(output_type_1L_chr == "Word"){
+    data_tb <- flextable::flextable(data_tb,
+                                   cwidth = 1.25) %>%
+      flextable::set_caption(caption_1L_chr)
+    if(!all(is.na(footnotes_chr))){
+      data_tb <- data_tb %>%
+        flextable::add_footer_lines(values = footnotes_chr)
+    }
+    data_tb
+    # cat("  \n")
+    # cat(
+    #   paste(
+    #     "\n```{=openxml}", 
+    #     format(data_tb, type = "docx"), 
+    #     "```\n", sep = "\n")
+    # )
+    # cat("  \n")
+  }
 }
 }
+make_brms_mdl_print_ls <- function(mdl_ls,
+                               label_stub_1L_chr,
+                               caption_1L_chr,
+                               footnote_1L_chr = "",
+                               output_type_1L_chr = "PDF"){
+    smry_mdl_ls <- summary(mdl_ls, digits = 4)
+  mdl_smry_chr <- smry_mdl_ls %>% capture.output() 
+  idx_dbl <- c("Formula: ",
+             "Samples: ", 
+             "Group-Level Effects: ", 
+             "Population-Level Effects: ", 
+             "Family Specific Parameters: ",
+             "Samples were drawn using ") %>% purrr::map_dbl(~mdl_smry_chr %>% startsWith(.x) %>% which())
+  data_tb <- make_brms_mdl_smry_tbl(smry_mdl_ls,
+                       grp_1L_chr = mdl_smry_chr[idx_dbl[3]],
+                       pop_1L_chr = mdl_smry_chr[idx_dbl[4]],
+                       fam_1L_chr = mdl_smry_chr[idx_dbl[5]])
+  add_to_row_ls <- list(pos = list(0, nrow(data_tb)),
+                 command = c(names(data_tb) %>% 
+                               stringr::str_replace_all("[[:punct:]]", " ") %>% 
+                               paste0(collapse=" & ") %>% paste0("\\\\\n"),
+                      paste0("\\hline\n","{\\footnotesize ",
+                             footnote_1L_chr,
+                             "}\n")))
+bold_lgl <- data_tb$Parameter %in% c(mdl_smry_chr[idx_dbl[3]],mdl_smry_chr[idx_dbl[4]],mdl_smry_chr[idx_dbl[5]])
+data_tb <- data_tb %>% dplyr::mutate(Parameter = purrr::map_chr(Parameter,
+                                                                ~ .x %>%
+                                                                  stringr::str_replace_all("[[:punct:]]", " ")))
+data_tb <- data_tb %>% dplyr::mutate(Parameter = Parameter %>%
+                                       purrr::map2_chr(dplyr::all_of(bold_lgl),
+                                                       ~ifelse(.y & output_type_1L_chr =="PDF",
+                                                               paste0("\\textbf{",.x,"}"),
+                                                               .x))) %>%
+  dplyr::mutate(dplyr::across(c(Bulk_ESS, Tail_ESS),as.character))
+
+# brms_mdl_print_ls <- list(mdl_smry_chr = mdl_smry_chr,
+#                           idx_dbl = idx_dbl,
+#                           data_tb = data_tb,
+#                           output_type_1L_chr = output_type_1L_chr,
+#                caption_1L_chr = caption_1L_chr,
+#                label_stub_1L_chr = label_stub_1L_chr,
+#               add_to_row_ls = add_to_row_ls)
+end_matter_1L_chr <- mdl_smry_chr[idx_dbl[6]:length(mdl_smry_chr)] %>% paste0(collapse = " ")
+brms_mdl_print_ls <- list(part_1 = mdl_smry_chr[idx_dbl[1]],
+                          part_2 = "\n\n",
+                          part_3 = c(mdl_smry_chr[1:(idx_dbl[2]-1)][-idx_dbl[1]],
+  paste0(mdl_smry_chr[idx_dbl[2]], " ",trimws(mdl_smry_chr[idx_dbl[2]+1]), collapse = " ")) %>%
+  paste0(collapse = "\n\n"),
+  part_4 = "\n\n",
+  part_5 = print_table_xx(data_tb = data_tb,
+               output_type_1L_chr = output_type_1L_chr,
+               caption_1L_chr = caption_1L_chr,
+               label = paste0("tab:",label_stub_1L_chr),
+               hline.after =  c(-1,0),
+               sanitize_fn = force,
+               footnotes_chr = ifelse(output_type_1L_chr=="PDF",
+                                      NA_character_,
+                                      end_matter_1L_chr),
+              addtorow = add_to_row_ls),
+  part_6 = end_matter_1L_chr)
+return(brms_mdl_print_ls)
+}
+print_brms_mdl_tbl <- function(brms_mdl_print_ls){
+  # mdl_smry_chr = brms_mdl_print_ls$mdl_smry_chr
+  # idx_dbl = brms_mdl_print_ls$idx_dbl
+  # data_tb = brms_mdl_print_ls$data_tb
+  # output_type_1L_chr = brms_mdl_print_ls$output_type_1L_chr
+  # caption_1L_chr = brms_mdl_print_ls$caption_1L_chr
+  # label_stub_1L_chr = brms_mdl_print_ls$label_stub_1L_chr
+  # add_to_row_ls = brms_mdl_print_ls$add_to_row_ls
+
+if(output_type_1L_chr=="PDF"){
+  end_matter_1L_chr %>% cat()
+}
+
+                               }
+
+
+
 ```
 
 # TEST SECTION
@@ -135,89 +242,25 @@ fig_nums <- captioner::captioner()
 <!-- \newpage -->
 <!-- \blandscape -->
 ```{r echo = F, results='asis'}
-#grid::grid.raster(tiff::readTIFF(paths_to_mdl_plts_chr[1]))
-# print_output <- function(output, cex = 0.8) {
-#   tmp <- capture.output(output)
-#   plot.new()
-#   text(0, 1, paste(tmp, collapse='\n'), adj = c(0,1), family = 'mono', cex = cex)
-#   box()
-# }
+brms_mdl_print_ls <- make_brms_mdl_print_ls(mdl_ls = readRDS(path_to_mdl_1L_chr),
+label_stub_1L_chr = "LABELSTUB",
+caption_1L_chr = "CAPTION FOR TABLE",
+output_type_1L_chr = params$output_type_1L_chr,
+footnote_1L_chr = "") 
+brms_mdl_print_ls 
+# print_brms_mdl_tbl()
 
-mdl_ls <- readRDS(path_to_mdl_1L_chr)
-smry_mdl_ls <- summary(mdl_ls, digits = 4)
-mdl_smry_chr <- smry_mdl_ls %>% capture.output()  #paste0(collapse='\n')
-mdl_smry_chr[3] %>% cat()
-cat("\n\n")
-c(mdl_smry_chr[1:4][-3], 
-  paste0(mdl_smry_chr[5], " ",trimws(mdl_smry_chr[6]), collapse = " ")) %>% 
-  paste0(collapse = "\n\n") %>% cat()
-cat("\n\n")
-data_tb <- make_brms_mdl_smry_tbl(smry_mdl_ls,
-                       grp_1L_chr = ifelse(params$pdf_output_lgl,
-                                           mdl_smry_chr[8],#paste0("\\\\textbf{","TEST","}"),
-                                           mdl_smry_chr[8]),
-                       pop_1L_chr = mdl_smry_chr[13],
-                       fam_1L_chr = mdl_smry_chr[21])
-label_stub_1L_chr <- "LABELSTUB"
-addtorow <- list(pos = list(0, nrow(data_tb)),
-                 command = c(names(data_tb) %>% stringr::str_replace_all("[[:punct:]]", " ") %>% paste0(collapse=" & ") %>% paste0("\\\\\n"),
-                      paste0("\\hline\n","{\\footnotesize ",
-                             "TEST",
-                             #mdl_smry_chr[25:27] %>% paste0(collapse = " "),
-                             "}\n")))
-caption_chr <- "CAPTION FOR TABLE"
-print_table_xx(data_tb = data_tb,
-               pdf_output_lgl = params$pdf_output_lgl,
-               caption_chr = caption_chr,
-               label = paste0("tab:",label_stub_1L_chr),
-               hline.after =  c(-1,0),
-               #sanitize_fn = force,
-              addtorow = addtorow)
-mdl_smry_chr[25:27] %>% paste0(collapse = " ") %>% cat()
-
-# print(smry_mdl_ls)
+# brms_mdl_print_ls$data_tb %>% print_table_xx(output_type_1L_chr = brms_mdl_print_ls$output_type_1L_chr,
+#                caption_1L_chr = brms_mdl_print_ls$caption_1L_chr,
+#                label = paste0("tab:",brms_mdl_print_ls$label_stub_1L_chr),
+#                hline.after =  c(-1,0),
+#                sanitize_fn = force,
+#                footnotes_chr = brms_mdl_print_ls$mdl_smry_chr[brms_mdl_print_ls$idx_dbl[6]:length(brms_mdl_print_ls$mdl_smry_chr)] %>% paste0(collapse = " "),
+#               addtorow = brms_mdl_print_ls$add_to_row_ls)
 #readRDS(path_to_mdl_1L_chr) %>% sjPlot::tab_model()
 
 ```
 
-```{r results = 'asis', echo = F}
-data_3_tb <- read.csv("../Data/glm_SOFAS.csv")
-data_3_tb <- data_3_tb[1:nrow(data_tb),]
-addtorow <- list()
-addtorow$pos <- list(0, nrow(data_3_tb)
-                     )
-addtorow$command <- c("Parameter* & Estimate	& SE	& 95CI & R2	& Sigma\\\\\n",
-                      paste0("\\hline\n","{\\footnotesize * Calculated as original scores divided by 100}\n")) 
-
-# caption_chr <- "Estimated coefficients from TTU models based on individual anxiety/depression measurements and SOFAS score using GLM (Gaussian distribution with log link)"
-# print_table_xx(data_tb = data_3_tb,
-#                pdf_output_lgl = params$pdf_output_lgl,
-#                caption_chr = caption_chr,
-#                label = "tab:coeffsll_table",
-#                hline.after =  c(-1,0#,nrow(data_3_tb)
-#                                 ),
-#               addtorow = addtorow)
-```
-
-```{r results = 'asis', echo = F}
-# addtorow <- list(pos = list(0, nrow(data_tb)),
-#                  command = c(names(data_tb) %>% paste0(collapse=" & ") %>% paste0("\\\\\n"),
-#                       paste0("\\hline\n","{\\footnotesize ",
-#                              mdl_smry_chr[25:27] %>% paste0(collapse = " "),
-#                              "}\n"))
-# )
-# addtorow$command <- c("Parameter & Estimate	& SE	& 95CI & R2	& Sigma\\\\\n",
-#                       # paste0("\\hline\n","{\\footnotesize Calculated as original scores divided by 100}\n")) 
-#                       paste0("\\hline\n","{\\footnotesize ",
-#                              mdl_smry_chr[25:27] %>% paste0(collapse = "") %>% stringr::str_replace_all("[[:punct:]]", " "),
-#                              "}\n"))
-# print_table_xx(data_tb = data_tb[,1:6],
-#                pdf_output_lgl = params$pdf_output_lgl,
-#                caption_chr = caption_chr,
-#                label = paste0("tab:",label_stub_1L_chr),
-#                hline.after =  c(-1,0),
-#               addtorow = addtorow)
-```
 
 
 <!-- \elandscape -->
