--- a/vignettes/Child_RMDs/_Programatic_Titling_Test.Rmd
+++ b/vignettes/Child_RMDs/_Programatic_Titling_Test.Rmd
@@ -3,22 +3,25 @@ title: "TEST"
 author: "Matthew Hamilton"
 date: "06/08/2020"
 output:
-  officedown::rdocx_document:
-    number_sections: yes
-  pdf_document:
+  bookdown::pdf_book:
     number_sections: yes
     includes:  
       in_header: preamble.tex
   bookdown::html_document2:
     number_sections: yes
+  word_document:
+    pandoc_args:
+     '--lua-filter=page-break.lua'
+  officedown::rdocx_document:
+    number_sections: yes
   html_document:
     df_print: paged
-  bookdown::pdf_book:
+  pdf_document:
     number_sections: yes
     includes:  
       in_header: preamble.tex
 params:
-  output_type_1L_chr: "Word"
+  output_type_1L_chr: "PDF"
 graphics: yes
 ---
 
@@ -89,6 +92,7 @@ print_table_xx <- function(data_tb,
                            output_type_1L_chr = "PDF",
                            caption_1L_chr = NA_character_,
                            footnotes_chr = NA_character_,
+                           merge_row_idx_int = NA_integer_,
                            label,
                            hline.after,
                            addtorow,
@@ -114,30 +118,34 @@ if(output_type_1L_chr == "PDF"){
       kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), 
                                 full_width = F, 
                                 position = "left") %>%
-      kableExtra::footnote(general = "TEST 1",
-                           general_title = "TEST 2",
+      kableExtra::footnote(general = rep("",length(footnotes_chr)),
+                           general_title = footnotes_chr,
                            footnote_as_chunk = T,
-                           title_format = c("italic","underline"),
+                           #title_format = c("italic","underline"),
                            threeparttable = T)
   print(data_tb)
   }
     if(output_type_1L_chr == "Word"){
+      j2_1L_dbl <- ncol(data_tb)
     data_tb <- flextable::flextable(data_tb,
-                                   cwidth = 1.25) %>%
-      flextable::set_caption(caption_1L_chr)
+                                   #cwidth = 1.25
+                                   ) %>%
+      flextable::set_caption(caption_1L_chr,
+                             autonum = officer::run_autonum())
+    if(!all(is.na(merge_row_idx_int))){
+      data_tb <- data_tb %>%
+      flextable::merge_h_range(i = merge_row_idx_int,
+                               j1 = 1,
+                               j2 = j2_1L_dbl) %>%
+        flextable::bold(i = merge_row_idx_int, j = 1) %>%
+        flextable::autofit(add_w = 0, add_h = 0)
+    }
+    
     if(!all(is.na(footnotes_chr))){
       data_tb <- data_tb %>%
         flextable::add_footer_lines(values = footnotes_chr)
     }
     data_tb
-    # cat("  \n")
-    # cat(
-    #   paste(
-    #     "\n```{=openxml}", 
-    #     format(data_tb, type = "docx"), 
-    #     "```\n", sep = "\n")
-    # )
-    # cat("  \n")
   }
 }
 }
@@ -166,16 +174,18 @@ make_brms_mdl_print_ls <- function(mdl_ls,
                              footnote_1L_chr,
                              "}\n")))
 bold_lgl <- data_tb$Parameter %in% c(mdl_smry_chr[idx_dbl[3]],mdl_smry_chr[idx_dbl[4]],mdl_smry_chr[idx_dbl[5]])
-data_tb <- data_tb %>% dplyr::mutate(Parameter = purrr::map_chr(Parameter,
+if(output_type_1L_chr =="PDF"){
+  data_tb <- data_tb %>% dplyr::mutate(Parameter = purrr::map_chr(Parameter,
                                                                 ~ .x %>%
                                                                   stringr::str_replace_all("[[:punct:]]", " ")))
+}
 data_tb <- data_tb %>% dplyr::mutate(Parameter = Parameter %>%
                                        purrr::map2_chr(dplyr::all_of(bold_lgl),
                                                        ~ifelse(.y & output_type_1L_chr =="PDF",
                                                                paste0("\\textbf{",.x,"}"),
                                                                .x))) %>%
-  dplyr::mutate(dplyr::across(c(Bulk_ESS, Tail_ESS),as.character))
-
+  dplyr::mutate(dplyr::across(c(Bulk_ESS, Tail_ESS),as.character)) %>% 
+  dplyr::mutate(dplyr::across(where(is.numeric), ~ round(., digits = 2) %>% as.character()))
 # brms_mdl_print_ls <- list(mdl_smry_chr = mdl_smry_chr,
 #                           idx_dbl = idx_dbl,
 #                           data_tb = data_tb,
@@ -183,17 +193,18 @@ data_tb <- data_tb %>% dplyr::mutate(Parameter = Parameter %>%
 #                caption_1L_chr = caption_1L_chr,
 #                label_stub_1L_chr = label_stub_1L_chr,
 #               add_to_row_ls = add_to_row_ls)
-end_matter_1L_chr <- mdl_smry_chr[idx_dbl[6]:length(mdl_smry_chr)] %>% paste0(collapse = " ")
+end_matter_1L_chr <- trimws(mdl_smry_chr[idx_dbl[6]:length(mdl_smry_chr)]) %>% paste0(collapse = " ")
 brms_mdl_print_ls <- list(part_1 = mdl_smry_chr[idx_dbl[1]],
                           part_2 = "\n\n",
-                          part_3 = c(mdl_smry_chr[1:(idx_dbl[2]-1)][-idx_dbl[1]],
-  paste0(mdl_smry_chr[idx_dbl[2]], " ",trimws(mdl_smry_chr[idx_dbl[2]+1]), collapse = " ")) %>%
-  paste0(collapse = "\n\n"),
+                          part_3 = c(trimws(mdl_smry_chr[1:(idx_dbl[2]-1)][-idx_dbl[1]]),
+  paste0(trimws(mdl_smry_chr[idx_dbl[2]]), " ",trimws(mdl_smry_chr[idx_dbl[2]+1]), collapse = " ")) %>%
+  paste0(collapse = ifelse(output_type_1L_chr=="PDF","\n\n","\n")),######
   part_4 = "\n\n",
-  part_5 = print_table_xx(data_tb = data_tb,
+  part_5 = list(data_tb = data_tb,
                output_type_1L_chr = output_type_1L_chr,
                caption_1L_chr = caption_1L_chr,
                label = paste0("tab:",label_stub_1L_chr),
+               merge_row_idx_int = as.integer(which(bold_lgl)),
                hline.after =  c(-1,0),
                sanitize_fn = force,
                footnotes_chr = ifelse(output_type_1L_chr=="PDF",
@@ -201,6 +212,13 @@ brms_mdl_print_ls <- list(part_1 = mdl_smry_chr[idx_dbl[1]],
                                       end_matter_1L_chr),
               addtorow = add_to_row_ls),
   part_6 = end_matter_1L_chr)
+if(output_type_1L_chr!="PDF"){
+  brms_mdl_print_ls$part_5$footnotes_chr <- c(paste0(brms_mdl_print_ls$part_1,ifelse(output_type_1L_chr=="Word","","\n")),
+                                              brms_mdl_print_ls$part_3,
+                                              brms_mdl_print_ls$part_6)
+  brms_mdl_print_ls$part_6 <- NULL
+}
+  
 return(brms_mdl_print_ls)
 }
 print_brms_mdl_tbl <- function(brms_mdl_print_ls){
@@ -239,31 +257,30 @@ plt_nms_chr <- rep(plt_nms_chr,2)
 fig_nums <- captioner::captioner()
 ```
 
-<!-- \newpage -->
-<!-- \blandscape -->
+Stuff here
+`r officer::run_pagebreak()`
+\newpage
+And lots of stuff too
+
+
+\blandscape
+
+
 ```{r echo = F, results='asis'}
 brms_mdl_print_ls <- make_brms_mdl_print_ls(mdl_ls = readRDS(path_to_mdl_1L_chr),
 label_stub_1L_chr = "LABELSTUB",
 caption_1L_chr = "CAPTION FOR TABLE",
 output_type_1L_chr = params$output_type_1L_chr,
 footnote_1L_chr = "") 
-brms_mdl_print_ls 
-# print_brms_mdl_tbl()
-
-# brms_mdl_print_ls$data_tb %>% print_table_xx(output_type_1L_chr = brms_mdl_print_ls$output_type_1L_chr,
-#                caption_1L_chr = brms_mdl_print_ls$caption_1L_chr,
-#                label = paste0("tab:",brms_mdl_print_ls$label_stub_1L_chr),
-#                hline.after =  c(-1,0),
-#                sanitize_fn = force,
-#                footnotes_chr = brms_mdl_print_ls$mdl_smry_chr[brms_mdl_print_ls$idx_dbl[6]:length(brms_mdl_print_ls$mdl_smry_chr)] %>% paste0(collapse = " "),
-#               addtorow = brms_mdl_print_ls$add_to_row_ls)
+#brms_mdl_print_ls[1:4] %>% purrr::walk(~cat(.x))
+rlang::exec(print_table_xx,!!!brms_mdl_print_ls[[5]])
 #readRDS(path_to_mdl_1L_chr) %>% sjPlot::tab_model()
 
 ```
+More stuff here
 
 
-
-<!-- \elandscape -->
+\elandscape
 <!-- \newpage -->
 ```{r results='asis', echo=F}
 #From: https://stackoverflow.com/questions/20409172/how-to-display-verbatim-inline-r-code-with-backticks-using-rmarkdown
