--- a/vignettes/Child_RMDs/_Programatic_Titling_Test.Rmd
+++ b/vignettes/Child_RMDs/_Programatic_Titling_Test.Rmd
@@ -93,12 +93,13 @@ print_table_xx <- function(data_tb,
                            caption_1L_chr = NA_character_,
                            footnotes_chr = NA_character_,
                            merge_row_idx_int = NA_integer_,
+                           digits_dbl = NULL,
                            label,
                            hline.after,
                            addtorow,
                            sanitize_fn = getOption("xtable.sanitize.text.function", NULL)){
    data_x_tb <- data_tb %>%
-  xtable::xtable(caption = caption_1L_chr, label = label)
+  xtable::xtable(caption = caption_1L_chr, label = label, digits = digits_dbl)
 if(output_type_1L_chr == "PDF"){
  data_x_tb %>%
   print(comment = F,
@@ -152,8 +153,9 @@ if(output_type_1L_chr == "PDF"){
 make_brms_mdl_print_ls <- function(mdl_ls,
                                label_stub_1L_chr,
                                caption_1L_chr,
-                               footnote_1L_chr = "",
-                               output_type_1L_chr = "PDF"){
+                               footnotes_chr = "",
+                               output_type_1L_chr = "PDF",
+                               digits_1L_dbl = 2){
     smry_mdl_ls <- summary(mdl_ls, digits = 4)
   mdl_smry_chr <- smry_mdl_ls %>% capture.output() 
   idx_dbl <- c("Formula: ",
@@ -166,59 +168,71 @@ make_brms_mdl_print_ls <- function(mdl_ls,
                        grp_1L_chr = mdl_smry_chr[idx_dbl[3]],
                        pop_1L_chr = mdl_smry_chr[idx_dbl[4]],
                        fam_1L_chr = mdl_smry_chr[idx_dbl[5]])
-  add_to_row_ls <- list(pos = list(0, nrow(data_tb)),
-                 command = c(names(data_tb) %>% 
-                               stringr::str_replace_all("[[:punct:]]", " ") %>% 
-                               paste0(collapse=" & ") %>% paste0("\\\\\n"),
-                      paste0("\\hline\n","{\\footnotesize ",
-                             footnote_1L_chr,
-                             "}\n")))
 bold_lgl <- data_tb$Parameter %in% c(mdl_smry_chr[idx_dbl[3]],mdl_smry_chr[idx_dbl[4]],mdl_smry_chr[idx_dbl[5]])
 if(output_type_1L_chr =="PDF"){
   data_tb <- data_tb %>% dplyr::mutate(Parameter = purrr::map_chr(Parameter,
                                                                 ~ .x %>%
-                                                                  stringr::str_replace_all("[[:punct:]]", " ")))
+                                                                  Hmisc::latexTranslate()))
 }
 data_tb <- data_tb %>% dplyr::mutate(Parameter = Parameter %>%
                                        purrr::map2_chr(dplyr::all_of(bold_lgl),
                                                        ~ifelse(.y & output_type_1L_chr =="PDF",
                                                                paste0("\\textbf{",.x,"}"),
-                                                               .x))) %>%
-  dplyr::mutate(dplyr::across(c(Bulk_ESS, Tail_ESS),as.character)) %>% 
-  dplyr::mutate(dplyr::across(where(is.numeric), ~ round(., digits = 2) %>% as.character()))
-# brms_mdl_print_ls <- list(mdl_smry_chr = mdl_smry_chr,
-#                           idx_dbl = idx_dbl,
-#                           data_tb = data_tb,
-#                           output_type_1L_chr = output_type_1L_chr,
-#                caption_1L_chr = caption_1L_chr,
-#                label_stub_1L_chr = label_stub_1L_chr,
-#               add_to_row_ls = add_to_row_ls)
+                                                               .x))) 
+if(output_type_1L_chr!="PDF"){
+data_tb <- data_tb %>%
+  dplyr::mutate(dplyr::across(c(Bulk_ESS, Tail_ESS),as.character)) %>%
+  dplyr::mutate(dplyr::across(where(is.numeric), ~ round(., digits = digits_1L_dbl) %>% as.character()))
+}
+
 end_matter_1L_chr <- trimws(mdl_smry_chr[idx_dbl[6]:length(mdl_smry_chr)]) %>% paste0(collapse = " ")
 brms_mdl_print_ls <- list(part_1 = mdl_smry_chr[idx_dbl[1]],
                           part_2 = "\n\n",
                           part_3 = c(trimws(mdl_smry_chr[1:(idx_dbl[2]-1)][-idx_dbl[1]]),
   paste0(trimws(mdl_smry_chr[idx_dbl[2]]), " ",trimws(mdl_smry_chr[idx_dbl[2]+1]), collapse = " ")) %>%
-  paste0(collapse = ifelse(output_type_1L_chr=="PDF","\n\n","\n")),######
+  paste0(collapse = ifelse(output_type_1L_chr=="PDF","\n\n","\n")),
   part_4 = "\n\n",
   part_5 = list(data_tb = data_tb,
                output_type_1L_chr = output_type_1L_chr,
                caption_1L_chr = caption_1L_chr,
                label = paste0("tab:",label_stub_1L_chr),
                merge_row_idx_int = as.integer(which(bold_lgl)),
+               digits_dbl = c(0, 
+                              names(data_tb) %>% purrr::map_dbl(~ifelse(.x %in% c("Bulk_ESS", "Tail_ESS"),
+                                                         0,
+                                                         digits_1L_dbl))),
                hline.after =  c(-1,0),
                sanitize_fn = force,
-               footnotes_chr = ifelse(output_type_1L_chr=="PDF",
-                                      NA_character_,
-                                      end_matter_1L_chr),
-              addtorow = add_to_row_ls),
+               footnotes_chr = NA_character_
+               ),
   part_6 = end_matter_1L_chr)
 if(output_type_1L_chr!="PDF"){
   brms_mdl_print_ls$part_5$footnotes_chr <- c(paste0(brms_mdl_print_ls$part_1,ifelse(output_type_1L_chr=="Word","","\n")),
                                               brms_mdl_print_ls$part_3,
                                               brms_mdl_print_ls$part_6)
   brms_mdl_print_ls$part_6 <- NULL
+}else{
+  footnotes_chr <- c(mdl_smry_chr[idx_dbl[1]],
+                     trimws(mdl_smry_chr[1:(idx_dbl[2]-1)][-idx_dbl[1]]),
+                     trimws(mdl_smry_chr[idx_dbl[2]]),
+                     trimws(mdl_smry_chr[idx_dbl[2]+1]),
+                     trimws(mdl_smry_chr[idx_dbl[6]:length(mdl_smry_chr)])) %>%
+    Hmisc::latexTranslate() 
+  footnotes_chr[1] <- footnotes_chr[1] %>% stringr::str_replace("~","\\\\textasciitilde")
+  brms_mdl_print_ls$part_5$addtorow <- list(pos = purrr::map(c(0,
+                                                                    rep(nrow(data_tb),
+                                                                          length(footnotes_chr)+1)),
+                                                                  ~ .x),
+                 command = c(names(data_tb) %>% 
+                               Hmisc::latexTranslate() %>% 
+                               paste0(collapse=" & ") %>% paste0("\\\\\n"),
+                             c("\\toprule\n"),
+                             footnotes_chr %>% purrr::map_chr(~paste0(
+                             "\\multicolumn{",ncol(data_tb),"}{l}{",
+                             paste0("{\\footnotesize ",.x,"}\n", collapse = ","),
+                             "}\\\\\n"))))
 }
-  
+    
 return(brms_mdl_print_ls)
 }
 print_brms_mdl_tbl <- function(brms_mdl_print_ls){
@@ -240,8 +254,6 @@ if(output_type_1L_chr=="PDF"){
 
 ```
 
-# TEST SECTION
-
 ```{r child="./AQoL_6D_Replication_Fns.Rmd", echo=FALSE}
 
 ```
@@ -257,30 +269,25 @@ plt_nms_chr <- rep(plt_nms_chr,2)
 fig_nums <- captioner::captioner()
 ```
 
-Stuff here
+
 `r officer::run_pagebreak()`
 \newpage
-And lots of stuff too
 
-
-\blandscape
-
+<!-- \blandscape -->
 
 ```{r echo = F, results='asis'}
 brms_mdl_print_ls <- make_brms_mdl_print_ls(mdl_ls = readRDS(path_to_mdl_1L_chr),
 label_stub_1L_chr = "LABELSTUB",
 caption_1L_chr = "CAPTION FOR TABLE",
 output_type_1L_chr = params$output_type_1L_chr,
-footnote_1L_chr = "") 
+footnotes_chr = rep("TEST",15) %>% paste0(collapse=",")) 
 #brms_mdl_print_ls[1:4] %>% purrr::walk(~cat(.x))
 rlang::exec(print_table_xx,!!!brms_mdl_print_ls[[5]])
 #readRDS(path_to_mdl_1L_chr) %>% sjPlot::tab_model()
 
 ```
-More stuff here
 
-
-\elandscape
+<!-- \elandscape -->
 <!-- \newpage -->
 ```{r results='asis', echo=F}
 #From: https://stackoverflow.com/questions/20409172/how-to-display-verbatim-inline-r-code-with-backticks-using-rmarkdown
@@ -304,6 +311,4 @@ More stuff here
 #   print(mdl_plts_ls)
 #   cat('\n\n') 
 # }
-
-
 ```
