--- a/vignettes/Child_RMDs/_Programatic_Titling_Test.Rmd
+++ b/vignettes/Child_RMDs/_Programatic_Titling_Test.Rmd
@@ -77,6 +77,7 @@ print_table_xx <- function(data_tb,
                            footnotes_chr = NA_character_,
                            merge_row_idx_int = NA_integer_,
                            digits_dbl = NULL,
+                           big_mark_1L_chr = " ",
                            label,
                            hline.after,
                            addtorow,
@@ -86,37 +87,39 @@ if(output_type_1L_chr == "PDF"){
   xtable::xtable(caption = caption_1L_chr, label = label, digits = digits_dbl)
  data_x_tb %>%
   print(comment = F,
-        floating = TRUE, #floating.environment = "sidewaystable",
+        floating = TRUE, 
         hline.after = hline.after,
         caption.placement = "top",
         add.to.row = addtorow, 
         sanitize.text.function = sanitize_fn,
+        format.args = list(big.mark = big_mark_1L_chr),
         include.colnames = FALSE,
-        include.rownames = FALSE#,scalebox = 0.75
-        ) 
- data_xx <- NULL
+        include.rownames = FALSE) 
 }else{
   if(output_type_1L_chr == "HTML"){
     data_kb <- data_tb %>%
-    kableExtra::kable(format = "html",escape = F,
+      kableExtra::kbl(format = "html",escape = F,
         caption = caption_1L_chr) %>%
-      kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed"#, "responsive"
-                                                      ),
-                                full_width = F,
-                                position = "left") %>%
-      kableExtra::footnote(general = footnotes_chr,
+      kableExtra::kable_paper("hover", full_width = F) 
+    if(!all(is.na(merge_row_idx_int))){
+    data_kb <- data_kb %>%
+      kableExtra::row_spec(merge_row_idx_int, bold = T)
+    }
+    # kableExtra::kable(format = "html",escape = F,
+    #     caption = caption_1L_chr) %>%
+    #   kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed"),
+    #                             full_width = F,
+    #                             position = "left") %>%
+     data_kb <- data_kb %>%
+       kableExtra::footnote(general = footnotes_chr,
                            general_title = "",
                            footnote_as_chunk = T,
-                           #title_format = c("italic","underline"),
                            threeparttable = T)
   data_xx <- data_kb
-  #print(data_kb)
   }
     if(output_type_1L_chr == "Word"){
       j2_1L_dbl <- ncol(data_tb)
-    data_fx <- flextable::flextable(data_tb,
-                                   #cwidth = 1.25
-                                   ) %>%
+    data_fx <- flextable::flextable(data_tb) %>% #
       flextable::set_caption(caption_1L_chr,
                              autonum = officer::run_autonum())
     if(!all(is.na(merge_row_idx_int))){
@@ -143,17 +146,17 @@ if(output_type_1L_chr == "PDF"){
         flextable::add_footer_lines(values = footnotes_chr)
     }
     data_xx <- data_fx
-  }
-}
-  data_xx <- 
+    }
   return(data_xx)
+}
 }
 make_brms_mdl_print_ls <- function(mdl_ls,
                                label_stub_1L_chr,
                                caption_1L_chr,
                                footnotes_chr = "",
                                output_type_1L_chr = "PDF",
-                               digits_1L_dbl = 2){
+                               digits_1L_dbl = 2,
+                               big_mark_1L_chr = " "){
     smry_mdl_ls <- summary(mdl_ls, digits = 4)
   mdl_smry_chr <- smry_mdl_ls %>% capture.output() 
   idx_dbl <- c("Formula: ",
@@ -179,13 +182,20 @@ data_tb <- data_tb %>% dplyr::mutate(Parameter = Parameter %>%
                                                                .x))) 
 if(output_type_1L_chr!="PDF"){
 data_tb <- data_tb %>%
-  dplyr::mutate(dplyr::across(c(Bulk_ESS, Tail_ESS),as.character)) 
+  dplyr::mutate(dplyr::across(c(Bulk_ESS, Tail_ESS),
+                              ~ format(.,big.mark = big_mark_1L_chr))) #
 }
 if(output_type_1L_chr=="HTML"){
 data_tb <- data_tb %>%
   dplyr::mutate(dplyr::across(where(is.numeric), 
-                              ~ round(., digits = digits_1L_dbl) %>% as.character())) 
+                              ~ format(round(.,digits = digits_1L_dbl), digits = digits_1L_dbl, nsmall = digits_1L_dbl))) 
 }
+data_tb <- data_tb %>%
+  dplyr::mutate(dplyr::across(where(is.character),
+                              ~ dplyr::case_when(is.na(.) ~ "",
+                                                 . == "NA" ~ "",
+                                                 endsWith(.," NA") ~ "",
+                                                 TRUE ~ .)))
 end_matter_1L_chr <- trimws(mdl_smry_chr[idx_dbl[6]:length(mdl_smry_chr)]) %>% paste0(collapse = " ")
 brms_mdl_print_ls <- list(part_1 = mdl_smry_chr[idx_dbl[1]],
                           part_2 = "\n\n",
@@ -203,6 +213,7 @@ brms_mdl_print_ls <- list(part_1 = mdl_smry_chr[idx_dbl[1]],
                               names(data_tb) %>% purrr::map_dbl(~ifelse(.x %in% c("Bulk_ESS", "Tail_ESS"),
                                                          0,
                                                          digits_1L_dbl))),
+               big_mark_1L_chr = big_mark_1L_chr,
                hline.after =  c(-1,0),
                sanitize_fn = force,
                footnotes_chr = NA_character_
@@ -268,7 +279,7 @@ plt_nms_chr <- c("Caption 1","Caption 2","Caption 3","Caption 4")
 output_ls <- list(`First predictor` = paths_to_mdl_plts_chr,
                   `Second predictor` = paths_to_mdl_plts_chr)
 plt_nms_chr <- rep(plt_nms_chr,2)
-fig_nums <- captioner::captioner()
+#fig_nums <- captioner::captioner()
 ```
 
 
@@ -284,33 +295,7 @@ caption_1L_chr = "CAPTION FOR TABLE",
 output_type_1L_chr = params$output_type_1L_chr,
 footnotes_chr = rep("TEST",15) %>% paste0(collapse=",")) 
 rlang::exec(print_table_xx,!!!brms_mdl_print_ls[[5]])
-# data_tb <- brms_mdl_print_ls[[5]]$data_tb
-# brms_mdl_print_ls[[5]]$output_type_1L_chr -> output_type_1L_chr
-# brms_mdl_print_ls[[5]]$caption_1L_chr -> caption_1L_chr
-# brms_mdl_print_ls[[5]]$label -> label
-# brms_mdl_print_ls[[5]]$merge_row_idx_int -> merge_row_idx_int
-# brms_mdl_print_ls[[5]]$digits_dbl -> digits_dbl
-# brms_mdl_print_ls[[5]]$hline.after -> hline.after
-# brms_mdl_print_ls[[5]]$sanitize_fn ->  sanitize_fn
-# brms_mdl_print_ls[[5]]$footnotes_chr -> footnotes_chr
-#  if(output_type_1L_chr == "HTML"){
-  # data_kb <- data_tb %>%
-  #   kableExtra::kable(format = "html",escape = F,
-  #       caption = caption_1L_chr) %>%
-  #     kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed"#, "responsive"
-  #                                                     ),
-  #                               full_width = F,
-  #                               position = "left") %>%
-  #     kableExtra::footnote(general = footnotes_chr,
-  #                          general_title = "",
-  #                          footnote_as_chunk = T,
-  #                          #title_format = c("italic","underline"),
-  #                          threeparttable = T)
-  #data_kb
 
-```
-```{r}
-#rlang::exec(print_table_xx,!!!brms_mdl_print_ls[[5]])
 ```
 
 <!-- \elandscape -->
@@ -326,15 +311,14 @@ rlang::exec(print_table_xx,!!!brms_mdl_print_ls[[5]])
 #cat("some text \u0060r 2+3\u0060 and more text")
 ```
 
-`r fig_nums("lab1", display = "cite")`
+<!-- `r fig_nums("lab1", display = "cite")` -->
  
 ```{r, fig.cap=c("Caption 1", "Caption 2", "Caption 3", "Caption 4"), echo=FALSE, message=F}
-# knitr::include_graphics(paths_to_mdl_plts_chr)
-# cat('\n') 
+knitr::include_graphics(paths_to_mdl_plts_chr)
+# cat('\n')
 # cat("###", "TEST", "\n\n")
-# 
 # for(plots in mdl_plts_ls){
 #   print(mdl_plts_ls)
-#   cat('\n\n') 
+#   cat('\n\n')
 # }
 ```
